<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="settings"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_guess"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/edit_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#673AB7"
        android:focusedByDefault="true"
        android:imeOptions="flagNoExtractUi"
        app:layout_constraintBottom_toTopOf="@+id/btn_guess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_attempts_left"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/show_attempts_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="496dp"
        android:text="@string/show_attempts_left_label"
        android:textColor="#DD2C00"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:backgroundTint="#4CAF50"
        android:fontFamily="sans-serif-black"
        android:text="@string/btn_guess_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:backgroundTint="#7E1717"
        android:fontFamily="sans-serif-condensed"
        android:onClick="restart"
        android:text="@string/btn_restart_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/show_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_msg_label"
        android:textAllCaps="true"
        android:textColor="#00838F"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/show_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663" />

    <TextView
        android:id="@+id/user_name_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="USER_NAME"
        android:textAllCaps="true"
        android:textColor="#00838F"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/show_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663" />

    <TextView
        android:id="@+id/show_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/show_hint_label_2"
        android:textColor="#827717"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/show_attempts_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_change_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setSelectedDifficulty"
        android:text="@string/change_difficulty"
        app:layout_constraintBottom_toTopOf="@+id/show_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="share"
        android:text="@string/share"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.766"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_guess"
        app:layout_constraintVertical_bias="0.15" />
</androidx.constraintlayout.widget.ConstraintLayout>